More title screen edits. yayyyyyy! :D

--- a/TreasureHunters/Assembly-CSharp.csproj
+++ b/TreasureHunters/Assembly-CSharp.csproj
@@ -52,6 +52,7 @@
      <Compile Include="Assets\Scripts\DoorScript.cs" />
      <Compile Include="Assets\Scripts\Game.cs" />
      <Compile Include="Assets\Scripts\MoveScript.cs" />
+     <Compile Include="Assets\Scripts\ShowPickup.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
